--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../style/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -70,29 +75,45 @@
         </div>
         <div class="container">
           <div class="main-cards">
-            <div class="main-cards-working">
-              <!-- <div class="main-cards-working-picture">
-                <img src="/img/Main/work.png" alt="" />
-              </div> -->
-              <div class="main-cards-working-text">
-                Working on my upcoming full-lenth album that`s releasing later
-                this year.
+            <div class="row">
+              <div class="col-4 col-sm-12">
+                <div class="main-cards-working">
+                  <div class="main-cards-working-picture">
+                    <img src="/img/Main/work.png" alt="" />
+                  </div>
+                  <div class="main-cards-working-text">
+                    Working on my upcoming full-lenth album that`s releasing
+                    later this year.
+                  </div>
+                </div>
+              </div>
+              <div class="col-4 col-sm-12">
+                <div class="main-cards-halloween">
+                  <div class="main-cards-halloween-picture">
+                    <img src="/img/Main/halloween.png" alt="" />
+                  </div>
+                  <div class="main-cards-halloween-text">
+                    Halloween vibes. <br />
+                    Listen my new track!
+                  </div>
+                </div>
+              </div>
+              <div class="col-4 col-sm-12">
+                <div class="main-cards-warForLove">
+                  <div class="main-cards-warForLove-picture">
+                    <img src="/img/Main/warForlove.png" alt="" />
+                  </div>
+                  <div class="main-cards-warForLove-text">
+                    WarForLove is OUT NOW!! <br />
+                    Stream it here!
+                  </div>
+                </div>
               </div>
             </div>
-            <!-- <div class="main-cards-halloween">
-              <div class="main-cards-halloween-text">
-                Halloween vibes. Listen my new track!
-              </div>
-            </div>
-            <div class="main-cards-warForLove">
-              <div class="main-cards-warForLove-text">
-                WarForLove is OUT NOW!! Stream it here!
-              </div>
-            </div> -->
           </div>
           <div class="main-brightLights">
             <div class="row align-center">
-              <div class="col-6">
+              <div class="col-6 col-md-12">
                 <div class="main-brightLights-head">
                   <div class="main-brightLights-head-img">
                     <img src="/img/Main/strips.svg" alt="" />
@@ -118,44 +139,46 @@
                     working on a self-produced album slated for release in 2020.
                   </p>
                 </div>
-                <div class="main-brightLights-sectionOne">
-                  <div class="main-brightLights-sectionOne-based">
-                    <div
-                      class="main-brightLights-sectionOne-based-picture"
-                    ></div>
-                    <div class="main-brightLights-sectionOne-based-text">
-                      Based in: Los Angeles
+                <div class="flex">
+                  <div class="main-brightLights-sectionOne">
+                    <div class="main-brightLights-sectionOne-based">
+                      <div
+                        class="main-brightLights-sectionOne-based-picture"
+                      ></div>
+                      <div class="main-brightLights-sectionOne-based-text">
+                        Based in: Los Angeles
+                      </div>
+                    </div>
+                    <div class="main-brightLights-sectionOne-genre">
+                      <div
+                        class="main-brightLights-sectionOne-genre-picture"
+                      ></div>
+                      <div class="main-brightLights-sectionOne-genre-text">
+                        Genre: #DancePop
+                      </div>
                     </div>
                   </div>
-                  <div class="main-brightLights-sectionOne-found">
-                    <div
-                      class="main-brightLights-sectionOne-found-picture"
-                    ></div>
-                    <div class="main-brightLights-sectionOne-found-text">
-                      Founded in 2011
+                  <div class="main-brightLights-sectionTwo">
+                    <div class="main-brightLights-sectionTwo-found">
+                      <div
+                        class="main-brightLights-sectionTwo-found-picture"
+                      ></div>
+                      <div class="main-brightLights-sectionTwo-found-text">
+                        Based in: Los Angeles
+                      </div>
                     </div>
-                  </div>
-                </div>
-                <div class="main-brightLights-sectionTwo">
-                  <div class="main-brightLights-sectionTwo-based">
-                    <div
-                      class="main-brightLights-sectionTwo-based-picture"
-                    ></div>
-                    <div class="main-brightLights-sectionTwo-based-text">
-                      Genre: #DancePop
-                    </div>
-                  </div>
-                  <div class="main-brightLights-sectionTwo-found">
-                    <div
-                      class="main-brightLights-sectionTwo-found-picture"
-                    ></div>
-                    <div class="main-brightLights-sectionTwo-found-text">
-                      Label: 333 Recordings
+                    <div class="main-brightLights-sectionTwo-label">
+                      <div
+                        class="main-brightLights-sectionTwo-label-picture"
+                      ></div>
+                      <div class="main-brightLights-sectionTwo-label-text">
+                        Genre: #DancePop
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-6 col-md-12">
                 <div class="main-brightLights-picture">
                   <img src="/img/Main/wom.png" alt="" class="wom" />
                   <img src="/img/Main/wom-car.png" alt="" class="wom-car" />
@@ -165,7 +188,7 @@
           </div>
           <div class="main-popULove">
             <div class="row align-center">
-              <div class="col-6">
+              <div class="col-6 col-sm-12">
                 <div class="main-popULove-blockText">
                   <div class="main-popULove-blockText-text">
                     “In an age where mainstream music is designed to be as
@@ -180,7 +203,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-6 col-sm-12">
                 <div class="main-popULove-picture">
                   <img src="/img/Main/woman-tv.png" alt="" />
                 </div>
@@ -189,13 +212,13 @@
           </div>
           <div class="main-tracks">
             <div class="row">
-              <div class="col-6 align-item-center">
+              <div class="col-6 col-md-12 align-item-center">
                 <div class="main-tracks-picture">
                   <img src="/img/Main/dj.png" alt="" />
                 </div>
               </div>
 
-              <div class="col-6">
+              <div class="col-6 col-md-12">
                 <div class="main-tracks-title">
                   <div class="main-tracks-title-img">
                     <img src="/img/Main/strips.svg" alt="" />
@@ -270,9 +293,9 @@
               </div>
             </div>
           </div>
-          <div class="main-slider">
+          <div class="main-slider center">
             <div class="row">
-              <div class="col-4">
+              <div class="col-4 col-md-12">
                 <div class="main-slider-chandle">
                   <div class="main-slider-chandle-picture">
                     <img src="/img/Main/Chandler.png" alt="alt" />
@@ -289,7 +312,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-4">
+              <div class="col-4 col-md-12">
                 <div class="main-slider-ibiza">
                   <div class="main-slider-ibiza-picture">
                     <img src="/img/Main/Chandler.png" alt="alt" />
@@ -304,7 +327,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-4">
+              <div class="col-4 col-md-12">
                 <div class="main-slider-swing">
                   <div class="main-slider-swing-picture">
                     <img src="/img/Main/Chandler.png" alt="alt" />
@@ -330,20 +353,31 @@
             <img src="/img/Header/logo.png" alt="alt" />
           </div>
           <div class="footer-contact">
-            <div class="footer-artist">
-              Artist Management: <span>Jake Henny </span>
+            <div class="footer-contact-title">
+              <p>ARTIST MANAGEMENT:</p>
+              <p>EMAIL:</p>
             </div>
-            <div class="footer-mail">
-              EMAIL: <span>jake@brightlightsofficial.com</span>
+            <div class="footer-contact-text">
+              <p>JAKE HENNY</p>
+              <p>JAKE@BRIGHTLIGHTSOFFICIAL.COM</p>
             </div>
           </div>
           <div class="footer-messenger">
-            <img src="/img/Footer/sociallink.png" alt="alt" />
+            <a href="#"><img src="/img/Footer/apple.svg" alt="" /></a
+            ><a href="#"><img src="/img/Footer/spoty.svg" alt="" /></a
+            ><a href="#"><img src="/img/Footer/insta.svg" alt="" /></a
+            ><a href="#"><img src="/img/Footer/youtube.svg" alt="" /></a
+            ><a href="#"><img src="/img/Footer/twiter.svg" alt="" /></a
+            ><a href="#"><img src="/img/Footer/facebook.svg" alt="" /></a>
           </div>
           <div class="footer-text">© 2020 DJ bright lights.</div>
         </div>
       </footer>
     </div>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
