--- a/html/index.html
+++ b/html/index.html
@@ -180,13 +180,21 @@
               </div>
               <div class="col-6 col-md-12">
                 <div class="main-brightLights-picture">
-                  <img src="/img/Main/wom.png" alt="" class="wom" />
-                  <img src="/img/Main/wom-car.png" alt="" class="wom-car" />
+                  <div class="row">
+                    <div class="col-md-6 text-align">
+                      <img src="/img/Main/wom.png" alt="" class="wom" />
+                    </div>
+                    <div class="col-md-6 text-align">
+                      <img src="/img/Main/wom-car.png" alt="" class="wom-car" />
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="main-popULove">
+        </div>
+        <div class="main-popULove">
+          <div class="container">
             <div class="row align-center">
               <div class="col-6 col-sm-12">
                 <div class="main-popULove-blockText">
@@ -210,7 +218,9 @@
               </div>
             </div>
           </div>
-          <div class="main-tracks">
+        </div>
+        <div class="main-tracks">
+          <div class="container">
             <div class="row">
               <div class="col-6 col-md-12 align-item-center">
                 <div class="main-tracks-picture">
@@ -293,7 +303,9 @@
               </div>
             </div>
           </div>
-          <div class="main-slider center">
+        </div>
+        <div class="main-slider center">
+          <div class="container">
             <div class="row">
               <div class="col-4 col-md-12">
                 <div class="main-slider-chandle">
@@ -363,12 +375,26 @@
             </div>
           </div>
           <div class="footer-messenger">
-            <a href="#"><img src="/img/Footer/apple.svg" alt="" /></a
-            ><a href="#"><img src="/img/Footer/spoty.svg" alt="" /></a
-            ><a href="#"><img src="/img/Footer/insta.svg" alt="" /></a
-            ><a href="#"><img src="/img/Footer/youtube.svg" alt="" /></a
-            ><a href="#"><img src="/img/Footer/twiter.svg" alt="" /></a
-            ><a href="#"><img src="/img/Footer/facebook.svg" alt="" /></a>
+            <!-- <div class="row"> -->
+            <!-- <div class="col-sm-2 col-xs-4"> -->
+            <a href="#"><img src="/img/Footer/apple.svg" alt="" /></a>
+            <!-- </div> -->
+            <!-- <div class="col-sm-2 col-xs-4"> -->
+            <a href="#"><img src="/img/Footer/spoty.svg" alt="" /></a>
+            <!-- </div> -->
+            <!-- <div class="col-sm-2 col-xs-4"> -->
+            <a href="#"><img src="/img/Footer/insta.svg" alt="" /></a>
+            <!-- </div> -->
+            <!-- <div class="col-sm-2 col-xs-4"> -->
+            <a href="#"><img src="/img/Footer/youtube.svg" alt="" /></a>
+            <!-- </div> -->
+            <!-- <div class="col-sm-2 col-xs-4"> -->
+            <a href="#"><img src="/img/Footer/twiter.svg" alt="" /></a>
+            <!-- </div> -->
+            <!-- <div class="col-sm-2 col-xs-4"> -->
+            <a href="#"><img src="/img/Footer/facebook.svg" alt="" /></a>
+            <!-- </div> -->
+            <!-- </div> -->
           </div>
           <div class="footer-text">© 2020 DJ bright lights.</div>
         </div>
