--- a/html/index.html
+++ b/html/index.html
@@ -327,7 +327,7 @@
               <div class="col-4 col-md-12">
                 <div class="main-slider-ibiza">
                   <div class="main-slider-ibiza-picture">
-                    <img src="/img/Main/Chandler.png" alt="alt" />
+                    <img src="/img/Main/disco1.png" alt="alt" />
                   </div>
                   <div class="main-slider-ibiza-title">Ibiza, IBZ</div>
                   <div class="main-slider-ibiza-text">Swag Ibiza Club</div>
@@ -342,7 +342,7 @@
               <div class="col-4 col-md-12">
                 <div class="main-slider-swing">
                   <div class="main-slider-swing-picture">
-                    <img src="/img/Main/Chandler.png" alt="alt" />
+                    <img src="/img/Main/disco2.png" alt="alt" />
                   </div>
                   <div class="main-slider-swing-title">Ibiza, IBZ</div>
                   <div class="main-slider-swing-text">El Swing Ibiza</div>
