--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
         <div class="container">
           <div class="header__body">
             <a class="header__logo" href="">
-              <img src="/img/Header/logo.png" alt="alt" />
+              <img src="../img/Header/logo.png" alt="alt" />
             </a>
             <div class="header__burger">
               <span></span>
@@ -63,7 +63,7 @@
               <div class="main-sound-text">War For Love</div>
               <div class="main-sound-player">
                 <div class="main-sound-player-play">
-                  <img src="/img/Main/play.svg" alt="alt" />
+                  <img src="../img/Main/play.svg" alt="alt" />
                   <div class="main-sound-player-line1"></div>
                   <div class="main-sound-player-line2"></div>
                   <div class="main-sound-player-line3"></div>
@@ -79,7 +79,7 @@
               <div class="col-4 col-sm-12">
                 <div class="main-cards-working">
                   <div class="main-cards-working-picture">
-                    <img src="/img/Main/work.png" alt="" />
+                    <img src="../img/Main/work.png" alt="" />
                   </div>
                   <div class="main-cards-working-text">
                     Working on my upcoming full-lenth album that`s releasing
@@ -90,7 +90,7 @@
               <div class="col-4 col-sm-12">
                 <div class="main-cards-halloween">
                   <div class="main-cards-halloween-picture">
-                    <img src="/img/Main/halloween.png" alt="" />
+                    <img src="../img/Main/halloween.png" alt="" />
                   </div>
                   <div class="main-cards-halloween-text">
                     Halloween vibes. <br />
@@ -101,7 +101,7 @@
               <div class="col-4 col-sm-12">
                 <div class="main-cards-warForLove">
                   <div class="main-cards-warForLove-picture">
-                    <img src="/img/Main/warForlove.png" alt="" />
+                    <img src="../img/Main/warForlove.png" alt="" />
                   </div>
                   <div class="main-cards-warForLove-text">
                     WarForLove is OUT NOW!! <br />
@@ -116,7 +116,7 @@
               <div class="col-6 col-md-12">
                 <div class="main-brightLights-head">
                   <div class="main-brightLights-head-img">
-                    <img src="/img/Main/strips.svg" alt="" />
+                    <img src="../img/Main/strips.svg" alt="" />
                   </div>
                   <div class="main-brightLights-head-title">Bright Lights</div>
                 </div>
@@ -182,10 +182,14 @@
                 <div class="main-brightLights-picture">
                   <div class="row">
                     <div class="col-md-6 text-align">
-                      <img src="/img/Main/wom.png" alt="" class="wom" />
+                      <img src="../img/Main/wom.png" alt="" class="wom" />
                     </div>
                     <div class="col-md-6 text-align">
-                      <img src="/img/Main/wom-car.png" alt="" class="wom-car" />
+                      <img
+                        src="../img/Main/wom-car.png"
+                        alt=""
+                        class="wom-car"
+                      />
                     </div>
                   </div>
                 </div>
@@ -213,7 +217,7 @@
               </div>
               <div class="col-6 col-sm-12">
                 <div class="main-popULove-picture">
-                  <img src="/img/Main/woman-tv.png" alt="" />
+                  <img src="../img/Main/woman-tv.png" alt="" />
                 </div>
               </div>
             </div>
@@ -224,14 +228,14 @@
             <div class="row">
               <div class="col-6 col-md-12 align-item-center">
                 <div class="main-tracks-picture">
-                  <img src="/img/Main/dj.png" alt="" />
+                  <img src="../img/Main/dj.png" alt="" />
                 </div>
               </div>
 
               <div class="col-6 col-md-12">
                 <div class="main-tracks-title">
                   <div class="main-tracks-title-img">
-                    <img src="/img/Main/strips.svg" alt="" />
+                    <img src="../img/Main/strips.svg" alt="" />
                   </div>
                   <div class="main-tracks-title-text">Last tracks</div>
                 </div>
@@ -285,7 +289,7 @@
                   <div class="main-tracks-social-title">Follow me:</div>
                   <div class="main-tracks-social-info">
                     <img
-                      src="/img/Main/spotify.svg"
+                      src="../img/Main/spotify.svg"
                       alt=""
                       class="main-tracks-social-info-icon"
                     />
@@ -293,7 +297,7 @@
                   </div>
                   <div class="main-tracks-social-info">
                     <img
-                      src="/img/Main/itunes.svg"
+                      src="../img/Main/itunes.svg"
                       alt=""
                       class="main-tracks-social-info-icon"
                     />
@@ -310,7 +314,7 @@
               <div class="col-4 col-md-12">
                 <div class="main-slider-chandle">
                   <div class="main-slider-chandle-picture">
-                    <img src="/img/Main/Chandler.png" alt="alt" />
+                    <img src="../img/Main/Chandler.png" alt="alt" />
                   </div>
                   <div class="main-slider-chandle-title">Chandler, AZ</div>
                   <div class="main-slider-chandle-text">
@@ -327,7 +331,7 @@
               <div class="col-4 col-md-12">
                 <div class="main-slider-ibiza">
                   <div class="main-slider-ibiza-picture">
-                    <img src="/img/Main/disco1.png" alt="alt" />
+                    <img src="../img/Main/disco1.png" alt="alt" />
                   </div>
                   <div class="main-slider-ibiza-title">Ibiza, IBZ</div>
                   <div class="main-slider-ibiza-text">Swag Ibiza Club</div>
@@ -342,7 +346,7 @@
               <div class="col-4 col-md-12">
                 <div class="main-slider-swing">
                   <div class="main-slider-swing-picture">
-                    <img src="/img/Main/disco2.png" alt="alt" />
+                    <img src="../img/Main/disco2.png" alt="alt" />
                   </div>
                   <div class="main-slider-swing-title">Ibiza, IBZ</div>
                   <div class="main-slider-swing-text">El Swing Ibiza</div>
@@ -362,7 +366,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer-logo">
-            <img src="/img/Header/logo.png" alt="alt" />
+            <img src="../img/Header/logo.png" alt="alt" />
           </div>
           <div class="footer-contact">
             <div class="footer-contact-title">
@@ -377,22 +381,22 @@
           <div class="footer-messenger">
             <!-- <div class="row"> -->
             <!-- <div class="col-sm-2 col-xs-4"> -->
-            <a href="#"><img src="/img/Footer/apple.svg" alt="" /></a>
+            <a href="#"><img src="../img/Footer/apple.svg" alt="" /></a>
             <!-- </div> -->
             <!-- <div class="col-sm-2 col-xs-4"> -->
-            <a href="#"><img src="/img/Footer/spoty.svg" alt="" /></a>
+            <a href="#"><img src="../img/Footer/spoty.svg" alt="" /></a>
             <!-- </div> -->
             <!-- <div class="col-sm-2 col-xs-4"> -->
-            <a href="#"><img src="/img/Footer/insta.svg" alt="" /></a>
+            <a href="#"><img src="../img/Footer/insta.svg" alt="" /></a>
             <!-- </div> -->
             <!-- <div class="col-sm-2 col-xs-4"> -->
-            <a href="#"><img src="/img/Footer/youtube.svg" alt="" /></a>
+            <a href="#"><img src="../img/Footer/youtube.svg" alt="" /></a>
             <!-- </div> -->
             <!-- <div class="col-sm-2 col-xs-4"> -->
-            <a href="#"><img src="/img/Footer/twiter.svg" alt="" /></a>
+            <a href="#"><img src="../img/Footer/twiter.svg" alt="" /></a>
             <!-- </div> -->
             <!-- <div class="col-sm-2 col-xs-4"> -->
-            <a href="#"><img src="/img/Footer/facebook.svg" alt="" /></a>
+            <a href="#"><img src="../img/Footer/facebook.svg" alt="" /></a>
             <!-- </div> -->
             <!-- </div> -->
           </div>
